--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "--extension-pkg-whitelist=PyQt5",
         "--errors-only"
     ],
-    "editor.formatOnPaste": false    
+    "editor.formatOnPaste": false,
+    "editor.trimAutoWhitespace":true
 }
