--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 
 test/testsave1.js
 test/testsave2.js
+css/dark.css.map
+css/dark.scss
+css/light.css.map
+css/light.scss
+.vscode
+work.code-workspace
